[package]
name = "canihazip"
version = "2.0.1"
authors = ["Hayden Hughes <hayden@foxes.systems>"]
edition = "2018"
description = "A [unoffical] rust library for https://icanhazip.com/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hugglesfox/canihasip-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
